fixed hover animation and icon alignment in footer
Icons were not properly centered in the footer, upon hover the edged were cut off on the zoom (especially twitter)

--- a/themes/nav-community-v1/static/css/style.css
+++ b/themes/nav-community-v1/static/css/style.css
@@ -1581,19 +1581,30 @@ textarea:-moz-placeholder {
     color: #ffffff;
 }
 
+.themeix-tool{
+	scale: 0.9;
+}
 .themeix-tool:hover{
-	transform: scale(1);
-	-webkit-animation: social 2s linear;
-    animation: social 2s linear;
+	transform: scale(0.9)!important;
+	-webkit-animation: social 1s;
+    animation: social 1s;
 }
 @-webkit-keyframes social {
-      0% { transform: scale(1.2); }
-    100% { transform: scale(1); }
+      0% { transform: scale(0.9); }
+	 50% { transform: scale(1); }
+    100% { transform: scale(0.9); }
 }
 
 @keyframes social {
-      0% { transform: scale(1.2); }
-    100% { transform: scale(1); }
+       0% { transform: scale(0.9); }
+	 50% { transform: scale(1); }
+    100% { transform: scale(0.9); }
+}
+
+a.themeix-tool .fa {
+    color: #FFFFFF;
+    font-size: 24px;
+    text-indent: .6px;
 }
 
 /* ==========================================
